fix(streaming): fix streaming, make streaming better aligned with standards, minor improvements on viewers, update viewer state handling